user_service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/users # When the frontend calls this path...
        pathType: Prefix
        backend:
          service:
            name: user-service # ...send the traffic to your specific service
            port:
              number: 5000
